--- a/collabrix-auth-service/src/main/resources/application.properties
+++ b/collabrix-auth-service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-spring.application.name=collabrix-auth-service
+spring.config.import=optional:file:.env[.properties]
+
+spring.application.name=${SPRING_APPLICATION_NAME}
+server.port=${SERVER_PORT}
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+jwt_secret=${JWT_SECRET}
+jwt_expiration=${JWT_EXPIRATION}
+jwt_refresh_expiration=${JWT_REFRESH_EXPIRATION}
