--- a/collabrix-auth-service/src/main/resources/application.properties
+++ b/collabrix-auth-service/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-spring.config.import=optional:file:.env[.properties]
 
-spring.application.name=${SPRING_APPLICATION_NAME}
-server.port=${SERVER_PORT}
+spring.config.import=optional:file:.env[.properties],optional:configserver:http://localhost:8888
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+
+spring.application.name=auth-service
+spring.profiles.active=dev
+
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/collabrix}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:12345678}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -14,3 +16,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt_secret=${JWT_SECRET}
 jwt_expiration=${JWT_EXPIRATION}
 jwt_refresh_expiration=${JWT_REFRESH_EXPIRATION}
+
+
+server.port=${SERVER_PORT:8081}
