--- a/collabrix-auth-service/src/main/resources/application.properties
+++ b/collabrix-auth-service/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.config.import=optional:file:.env[.properties],optional:configserver:http:
 spring.application.name=auth-service
 spring.profiles.active=dev
 
+service.name=${SERVICE_NAME}
+
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/collabrix}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:12345678}
@@ -13,9 +15,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-jwt_secret=${JWT_SECRET}
-jwt_expiration=${JWT_EXPIRATION}
-jwt_refresh_expiration=${JWT_REFRESH_EXPIRATION}
+jwt.secret=${JWT_SECRET}
+jwt.access.expiration-ms=${JWT_EXPIRATION}
+jwt.refresh.expiration-ms=${JWT_REFRESH_EXPIRATION}
 
 
 server.port=${SERVER_PORT:8081}
