--- a/collabrix-common-libraries/pom.xml
+++ b/collabrix-common-libraries/pom.xml
@@ -28,6 +28,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>4.0.0-RC1</version>
+        </dependency>
+
         <!-- Spring annotations if needed for utils -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
