--- a/collabrix-auth-service/src/main/resources/application.properties
+++ b/collabrix-auth-service/src/main/resources/application.properties
@@ -1,23 +1,46 @@
+# Application Configuration
+spring.application.name=collabrix-auth-service
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+service.name=${SERVICE_NAME:collabrix-auth-service}
 
-spring.config.import=optional:file:.env[.properties],optional:configserver:http://localhost:8888
+# Server Configuration
+server.port=${SERVER_PORT:8081}
 
-
-spring.application.name=auth-service
-spring.profiles.active=dev
-
-service.name=${SERVICE_NAME}
-
+# Database Configuration
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/collabrix}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:12345678}
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Config Server (Optional)
+spring.config.import=optional:file:.env[.properties]
 
-jwt.secret=${JWT_SECRET}
-jwt.access.expiration-ms=${JWT_EXPIRATION}
-jwt.refresh.expiration-ms=${JWT_REFRESH_EXPIRATION}
+# Collabrix Security Starter Configuration
+collabrix.security.enabled=true
+collabrix.security.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/collabrix}
+collabrix.security.roles-claim=roles
 
 
-server.port=${SERVER_PORT:8081}
+# Spring Security OAuth2 Resource Server
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/collabrix}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWK_SET_URI:http://localhost:8080/realms/collabrix/protocol/openid-connect/certs}
+
+
+# Keycloak Configuration
+keycloak.server-url=${KEYCLOAK_SERVER_URL:http://localhost:8080}
+keycloak.realm=${KEYCLOAK_REALM:collabrix}
+keycloak.client-id=${KEYCLOAK_CLIENT_ID:collabrix-client}
+keycloak.client-secret=${KEYCLOAK_CLIENT_SECRET}
+keycloak.admin-username=${KEYCLOAK_ADMIN_USERNAME:admin}
+keycloak.admin-password=${KEYCLOAK_ADMIN_PASSWORD:admin}
+
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.collabrix=${LOG_LEVEL:DEBUG}
+logging.level.org.springframework.security=${SECURITY_LOG_LEVEL:DEBUG}
+logging.level.org.keycloak=${KEYCLOAK_LOG_LEVEL:DEBUG}
