--- a/collabrix-auth-service/pom.xml
+++ b/collabrix-auth-service/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>collabrix-common-libraries</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.collabrix</groupId>
+            <artifactId>collabrix-security-starter</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
         <dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -110,6 +115,15 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>26.0.7</version>
+        </dependency>
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
