--- a/collabrix-auth-service/src/main/resources/application.properties
+++ b/collabrix-auth-service/src/main/resources/application.properties
@@ -1,46 +1,68 @@
-# Application Configuration
-spring.application.name=collabrix-auth-service
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
-service.name=${SERVICE_NAME:collabrix-auth-service}
-
+# ============================================
 # Server Configuration
-server.port=${SERVER_PORT:8081}
+# ============================================
+server.port=8081
+spring.application.name=collabrix-auth-service
 
-# Database Configuration
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/collabrix}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:12345678}
-
-# Config Server (Optional)
-spring.config.import=optional:file:.env[.properties]
-
-# Collabrix Security Starter Configuration
-collabrix.security.enabled=true
-collabrix.security.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/collabrix}
-collabrix.security.roles-claim=roles
-
-
-# Spring Security OAuth2 Resource Server
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/collabrix}
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWK_SET_URI:http://localhost:8080/realms/collabrix/protocol/openid-connect/certs}
-
-
+# ============================================
 # Keycloak Configuration
+# ============================================
 keycloak.server-url=${KEYCLOAK_SERVER_URL:http://localhost:8080}
 keycloak.realm=${KEYCLOAK_REALM:collabrix}
-keycloak.client-id=${KEYCLOAK_CLIENT_ID:collabrix-client}
-keycloak.client-secret=${KEYCLOAK_CLIENT_SECRET}
-keycloak.admin-username=${KEYCLOAK_ADMIN_USERNAME:admin}
-keycloak.admin-password=${KEYCLOAK_ADMIN_PASSWORD:admin}
+keycloak.client-id=${KEYCLOAK_CLIENT_ID:collabrix-backend}
+keycloak.client-secret=${KEYCLOAK_CLIENT_SECRET:your-client-secret}
+keycloak.admin.username=${KEYCLOAK_ADMIN_USERNAME:admin}
+keycloak.admin.password=${KEYCLOAK_ADMIN_PASSWORD:admin}
+keycloak.admin-client-id=admin-cli
 
+# ============================================
+# Kafka Configuration (NEW)
+# ============================================
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 
-# Actuator Configuration
-management.endpoints.web.exposure.include=health,info,metrics
-management.endpoint.health.show-details=when-authorized
+# Producer Configuration
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.acks=all
+spring.kafka.producer.retries=3
+spring.kafka.producer.properties.enable.idempotence=true
 
+# Topic Names
+kafka.topic.user-registered=user.registered
+kafka.topic.user-deleted=user.deleted
+kafka.topic.user-role-changed=user.role.changed
 
+# ============================================
+# Security Configuration
+# ============================================
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloak.server-url}/realms/${keycloak.realm}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${keycloak.server-url}/realms/${keycloak.realm}/protocol/openid-connect/certs
+
+# ============================================
 # Logging Configuration
+# ============================================
 logging.level.root=INFO
-logging.level.com.collabrix=${LOG_LEVEL:DEBUG}
-logging.level.org.springframework.security=${SECURITY_LOG_LEVEL:DEBUG}
-logging.level.org.keycloak=${KEYCLOAK_LOG_LEVEL:DEBUG}
+logging.level.com.collabrix.auth=DEBUG
+logging.level.org.keycloak=WARN
+logging.level.org.springframework.kafka=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# ============================================
+# Actuator Configuration
+# ============================================
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+management.prometheus.metrics.export.enabled=true
+
+# ============================================
+# Cache Configuration
+# ============================================
+spring.cache.type=simple
+
+# ============================================
+# Error Handling
+# ============================================
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
