--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  # Zookeeper - Required for Kafka
+  # 🧠 Zookeeper - Required for Kafka
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
     container_name: collabrix-zookeeper
@@ -16,7 +16,7 @@ services:
       - zookeeper-data:/var/lib/zookeeper/data
       - zookeeper-logs:/var/lib/zookeeper/log
 
-  # Kafka Broker
+  # 🪶 Kafka Broker
   kafka:
     image: confluentinc/cp-kafka:7.5.0
     container_name: collabrix-kafka
@@ -46,14 +46,14 @@ services:
       timeout: 10s
       retries: 5
 
-  # Kafka UI (Optional but recommended for development)
+  # 📊 Kafka UI (Developer Dashboard)
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: collabrix-kafka-ui
     depends_on:
       - kafka
     ports:
-      - "8090:8080"
+      - "8085:8080" # UI available on localhost:8085
     environment:
       KAFKA_CLUSTERS_0_NAME: collabrix-local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
@@ -69,3 +69,4 @@ volumes:
   zookeeper-data:
   zookeeper-logs:
   kafka-data:
+  keycloak-data:
